--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -10,17 +10,18 @@
 <body>
     <div class="container">
         <h2>Javagram</h2>
-        <form method="post">
-            <input type="text" placeholder="First Name">
-            <input type="text" placeholder="Last Name">
-            <input type="text" placeholder="Username">
-            <input type="text" placeholder="Email">
+        <form method="post" th:object="${user}" th:action="@{/submitItem}">
+            <input type="text" placeholder="First Name" th:field="*{firstName}">
+            <input type="text" placeholder="Last Name" th:field="*{lastName}">
+            <input type="text" placeholder="Username" th:field="*{userName}">
+            <input type="text" placeholder="Email" th:field="*{email}">
             <p style="font-weight: bold;">Date of Birth</p>
-            <input type="date">
+            <input type="date" th:field="*{dateOfBirth}">
             <br>
             <br>
             <input type="submit" value="Submit">
         </form>
+
     </div>
 </body>
 </html>
